Template Advanced Lecture

--- a/dj08_TemplateAdvanced/forumApp/templates/posts/old-examples.html
+++ b/dj08_TemplateAdvanced/forumApp/templates/posts/old-examples.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    {% include 'common/nav.html' %}
+    {% include 'nav.html' %}
 
     <div class="container">
     <h1>Template Basics</h1>
