--- a/forumApp/templates/posts/edit-post.html
+++ b/forumApp/templates/posts/edit-post.html
@@ -1,10 +1,10 @@
 {% extends 'common/base.html' %}
 
-{% block content %}    
-    <h1>Delete Post</h1>
-    
+{% block content %}
+    <h1>Edit Post</h1>
+
     <div class="container">
-        <form action="{% url 'delete-post' post.pk %}" method="post">
+        <form action="{% url 'edit-post' post.pk %}" method="post">
             {% csrf_token %}
             {{ form }}
             <button class="button-9">Submit</button>
@@ -12,4 +12,3 @@
     </div>
 
 {% endblock %}
- 
